[package]
name = "cambio"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = {version = "0.16.1", features = ["dynamic_linking", "jpeg", "serialize"]}
bevy_asset_loader = { version = "0.23.0", features = ["2d"] }
bevy_matchbox = { version = "0.12.0", features = ["signaling"] }
bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
num-traits = "0.2.19"
strum = "0.27.2"
strum_macros = "0.27.2"
bevy_tweening = "0.13.0"
bevy_rand = {version = "0.11.3", features = ["wyrand"]}
rand_core = "0.9.3"
rand = "0.9.2"
itertools = "0.14.0"
rstest = "0.26.1"

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = { version = "0.3.3", features = [] }

# Wasm-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
