[package]
name = "cambio"
version = "0.1.0"
publish = false
authors = ["Hugo Peters <git@hugopeters.me>"]
edition = "2024"
exclude = ["dist", "build", "assets", "credits"]

[workspace]
members = ["crates/signaling","mobile"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
dev = [
    "bevy/dynamic_linking",
]

[dependencies]
bevy = {version = "0.17.2", features = ["jpeg", "serialize"]}
bevy_asset_loader = { version = "0.24.0-rc.1", features = ["2d"] }
bevy_matchbox = { version = "0.13.0" }
bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
num-traits = "0.2.19"
strum = "0.27.2"
strum_macros = "0.27.2"
bevy_tweening = "0.14.0"
bevy_rand = {version = "0.12.1", features = ["wyrand"]}
rand_core = "0.9.3"
rand = "0.9.2"
itertools = "0.14.0"
rstest = "0.26.1"
# keep the following in sync with Bevy's dependencies
winit = { version = "0.30", default-features = false }
image = { version = "0.25", default-features = false }
## This greatly improves WGPU's performance due to its heavy use of trace! calls
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
bevy_ui_text_input = { git = "https://github.com/ickshonpe/bevy_ui_text_input", rev = "95927e9b4a6590429d3ed1e7d07ff07316630848" }

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = { version = "0.3.3", features = [] }

# Wasm-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }


[build-dependencies]
embed-resource = "1"
