[package]
name = "mobile"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "mobile"
crate-type = ["staticlib", "cdylib"]

[dependencies]
cambio = { path = ".." } # ToDo
bevy = { version = "0.16.0", default-features = false, features = ["android-native-activity"] }

[target."cfg(target_os = \"ios\")".dependencies]
objc2-avf-audio = { version = "0.3.0", features = [
    "AVAudioSession",
    "AVAudioSessionTypes",
] }

[package.metadata.android]
package = "me.hugo.cambio"
apk_name = "CambioOnline"  # must be the same as GAME_OSX_APP_NAME in release workflow
assets = "../assets"
strip = "strip"
resources = "../build/android/res"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
target_sdk_version = 35

[package.metadata.android.application]
icon = "@mipmap/icon"
label = "Cambio Online"
